--- a/package.json
+++ b/package.json
@@ -6,20 +6,53 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ls-lint": "node_modules/.bin/ls-lint"
   },
   "dependencies": {
+    "@emailjs/browser": "3.11.0",
+    "@ls-lint/ls-lint": "2.0.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-navigation-menu": "1.1.3",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-countup": "6.4.2",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "1.6.0",
+    "react-grid-carousel": "1.0.1",
+    "sonner": "0.6.2",
+    "swiper": "10.0.4",
     "tailwindcss": "3.3.2",
+    "zod": "3.21.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "eslint": "8.43.0",
+    "eslint-config-standard-with-typescript": "35.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.7.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-react": "7.32.2",
+    "ts-standard": "12.0.2",
     "typescript": "5.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      ".ts-standard"
+    ],
+    "parserOptions": {
+      "project": [
+        "./tsconfig.json"
+      ]
+    },
+    "rules": {
+      "next/no-img-element": "off"
+    }
   }
 }
