--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-grid-carousel": "1.0.1",
     "sonner": "0.6.2",
     "swiper": "10.0.4",
+    "tailwind-merge": "2.2.2",
     "tailwindcss": "3.3.2",
     "zod": "3.21.4"
   },
