--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.7",
+    "lite-youtube-embed": "0.3.2",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "1.6.0",
     "react-grid-carousel": "1.0.1",
+    "react-lite-youtube-embed": "^2.4.0",
     "sonner": "0.6.2",
     "swiper": "10.0.4",
     "tailwind-merge": "2.2.2",
