--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.7",
     "lite-youtube-embed": "0.3.2",
